# slide-replace

./: CMakeLists.txt  README.md
include/: bw-filter-task.hpp  path.hpp  slide-merger-task.hpp  slide-replace-task.hpp  task.hpp  timedslide-replace-task.hpp  tools.hpp  worker.hpp
src/: bw-filter-task.cpp  main.cpp  path.cpp  slide-merger-task.cpp  slide-replace-task.cpp  task.cpp  timedslide-replace-task.cpp  tools.cpp  worker.cpp
